Update DOM_v3   Add emulator/mem_registers.dart   Remove enum {V, O}Register   Add ft/TripleIterable   Add web/debugger/mem_registers.{html, dart}   Remove web/debugger/{other, video}_registers.{html, dart}   Update boostrap version from 3.3.1 to 3.3.7   Add boostrap's tooltip init in web/main.dart   Update emulator/src/emulator.dart maps   Update emulator/src/worker.dart debug

--- a/test/DOM_v3/web/debugger/registers.html
+++ b/test/DOM_v3/web/debugger/registers.html
@@ -10,10 +10,10 @@
   </thead>
   <tbody>
     <tr><td colspan="2">
-      <span class="label label-default"/>
-      <span class="label label-default"/>
-      <span class="label label-default"/>
-      <span class="label label-default"/>
+      <span class="label label-default">fl</span>
+      <span class="label label-default">fl</span>
+      <span class="label label-default">fl</span>
+      <span class="label label-default">fl</span>
     </td></tr>
     <tr><td>reg0</td><td>FFFF</td></tr>
     <tr><td>reg1</td><td>FFFF</td></tr>
