--- a/web/debugger/mem_registers.html
+++ b/web/debugger/mem_registers.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <h4>Mapped Registers</h4>
+    <h4>Memory Registers</h4>
   </div>
   <div class="col-sm-6">
     <table class="table table-bordered table-striped table-condensed">
