--- a/web/index.html
+++ b/web/index.html
@@ -74,8 +74,8 @@
                   </span>
                 </div>
                 <div class="col-sm-12" id="debColButtons">
-                  <button type="button" class="btn btn-success" style="margin-right: 20px;">Resume</button>
-                  <button type="button" class="btn btn-warning" style="display: none; margin-right: 20px;">Pause</button>
+                  <button type="button" class="btn btn-success debStatusButton">Resume</button>
+                  <button type="button" class="btn btn-warning debStatusButton" style="display: none">Pause</button>
                   <b>Auto-break:</b>
                   <label class="radio-inline"><input type="radio" name="optradio">Instruction</label>
                   <label class="radio-inline"><input type="radio" name="optradio">Frame</label>
