--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,8 @@
       <div id="magbut" class="row">Add some random
       </div><!-- /#magbut -->
 
+      <input id="inBut" type="file"/>
+
       <!-- DEBUGGER CONTAINER-->
       <div class="row" id="debContainer">
         <div class="col-lg-12">
