Minor changes Fix type ft.Option Wired debugger/{mem_registers, registers} to GameBoy

--- a/web/debugger/registers.html
+++ b/web/debugger/registers.html
@@ -15,11 +15,11 @@
       <span class="label label-default">fl</span>
       <span class="label label-default">fl</span>
     </td></tr>
-    <tr><td>reg0</td><td>FFFF</td></tr>
-    <tr><td>reg1</td><td>FFFF</td></tr>
-    <tr><td>reg2</td><td>FFFF</td></tr>
-    <tr><td>reg3</td><td>FFFF</td></tr>
-    <tr><td>reg4</td><td>FFFF</td></tr>
-    <tr><td>reg5</td><td>FFFF</td></tr>
+    <tr><td>reg0</td><td>0000</td></tr>
+    <tr><td>reg1</td><td>0000</td></tr>
+    <tr><td>reg2</td><td>0000</td></tr>
+    <tr><td>reg3</td><td>0000</td></tr>
+    <tr><td>reg4</td><td>0000</td></tr>
+    <tr><td>reg5</td><td>0000</td></tr>
   </tbody>
 </table>
