--- a/web/index.html
+++ b/web/index.html
@@ -61,20 +61,7 @@
               <!-- DEBUGGER BODY -->
               <div class="row" id="debBody">
 
-                <div class="col-lg-12" id="debColTimings">
-                  <span>
-                    <b>Emulation time:</b>
-                    <span class="label label-primary">0:10:42.250</span>
-                  </span>
-                  <span>
-                    <b>Instructions:</b>
-                    <span class="label label-primary">121 100 504</span>
-                  </span>
-                  <span>
-                    <b>Frames:</b>
-                    <span class="label label-primary">17000.54</span>
-                  </span>
-                </div>
+                <div class="col-lg-12" id="debColClock"></div>
                 <div class="col-sm-12" id="debColButtons">
                   <button type="button" class="btn btn-success debStatusButton">Resume</button>
                   <button type="button" class="btn btn-warning debStatusButton" style="display: none">Pause</button>
@@ -118,6 +105,7 @@
        $("#debColMemoryExplorer").load("debugger/memory_explorer.html");
        $("#debColInstructionFlow").load("debugger/instruction_flow.html");
        $("#debColRegisters").load("debugger/registers.html");
+       $("#debColClock").load("debugger/clock_info.html");
      });
     </script>
 
