--- a/web/index.html
+++ b/web/index.html
@@ -119,7 +119,7 @@
      $(function(){
        $("#debColMemRegisters").load("debugger/mem_registers.html");
        $("#debColCartInfo").load("debugger/cart_info.html");
-       $("#debColMemoryExplorer").load("debugger/memory_explorer.html");
+       $("#debColMemoryExplorer").load("debugger/mem_explorer.html");
        $("#debColInstructionFlow").load("debugger/instruction_flow.html");
        $("#debColRegisters").load("debugger/registers.html");
      });
