--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/css/bootstrap-slider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -38,11 +39,22 @@
 
     <!-- MAIN CONTAINER -->
     <div class="container-fluid">
-      <!-- MAGBUT -->
-      <div id="magbut" class="row">Add some random
-      </div><!-- /#magbut -->
 
-      <input id="inBut" type="file"/>
+      <!-- MAIN SPACE -->
+      <div class="row">
+
+        <div id="magbut" class="col-sm-3">Add some random</div>
+        <input id="inBut" type="file" class="col-sm-3"/>
+
+        <!-- BOTTOM PANEL -->
+        <div class="col-sm-12" id="mainBottomPanel">
+          <!-- <div class="row"> -->
+          <!-- <div class="col-lg-1" ></div> -->
+
+          <!-- </div> -->
+        </div><!-- /BOTTOM PANEL -->
+
+      </div><!-- /MAIN SPACE -->
 
       <!-- DEBUGGER CONTAINER-->
       <div class="row" id="debContainer">
@@ -78,7 +90,7 @@
                     <div class="col-sm-8" id="debColInstructionFlow"></div>
                   </div>
                   <div class="row">
-                    <div id="debColMemoryExplorer" class="col-lg-12"></div>
+                    <div id="debColMemoryExplorer" class="col-sm-12"></div>
                   </div>
                 </div>
                 <div class="col-sm-4" id="debColMemRegisters"></div>
@@ -98,15 +110,18 @@
     <!-- Js Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/bootstrap-slider.min.js"></script>
 
     <script>
-     $(function(){
-       $("#debColMemRegisters").load("debugger/mem_registers.html");
-       $("#debColMemoryExplorer").load("debugger/memory_explorer.html");
-       $("#debColInstructionFlow").load("debugger/instruction_flow.html");
-       $("#debColRegisters").load("debugger/registers.html");
-       $("#debColClock").load("debugger/clock_info.html");
-     });
+      $(function(){
+      $("#debColMemRegisters").load("debugger/mem_registers.html");
+      $("#debColMemoryExplorer").load("debugger/memory_explorer.html");
+      $("#debColInstructionFlow").load("debugger/instruction_flow.html");
+      $("#debColRegisters").load("debugger/registers.html");
+      $("#debColClock").load("debugger/clock_info.html");
+      $("#mainBottomPanel").load("main_space/bottom_panel.html");
+
+      });
     </script>
 
     <script defer src="main.dart.js" type="application/dart"></script>
