finaly added this ,issing row

--- a/web/debugger/instruction_flow.html
+++ b/web/debugger/instruction_flow.html
@@ -16,5 +16,6 @@
     <tr><td id="instr3">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr4">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr5">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
+    <tr><td id="instr§">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
   </tbody>
 </table>
