Minor update   Improve speed slider look

--- a/web/index.html
+++ b/web/index.html
@@ -46,13 +46,8 @@
         <div id="magbut" class="col-sm-3">Add some random</div>
         <input id="inBut" type="file" class="col-sm-3"/>
 
-        <!-- BOTTOM PANEL -->
-        <div class="col-sm-12" id="mainBottomPanel">
-          <!-- <div class="row"> -->
-          <!-- <div class="col-lg-1" ></div> -->
 
-          <!-- </div> -->
-        </div><!-- /BOTTOM PANEL -->
+        <div class="col-sm-offset-1 col-sm-8" id="mainBottomPanel"></div>
 
       </div><!-- /MAIN SPACE -->
 
