--- a/web/debugger/mem_registers.html
+++ b/web/debugger/mem_registers.html
@@ -11,73 +11,73 @@
         </tr>
       </thead>
       <tbody id="debTbody0MemRegisters">
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
       </tbody>
     </table>
@@ -91,73 +91,73 @@
         </tr>
       </thead>
       <tbody id="debTbody1MemRegisters">
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
-        <tr><td>
+        <tr><td class="debMemRegTd">
           <a href="#" data-toggle="tooltip" title="Hooray!">mreg</a>
-          <span class="label label-primary debLabelCgb">cgb</span>
+          <span class="label label-primary debMemRegLabelCgb">cgb</span>
         </td><td>00</td></tr>
       </tbody>
     </table>
