--- a/web/main_space/bottom_panel.html
+++ b/web/main_space/bottom_panel.html
@@ -1,4 +1,8 @@
-<div class="well">
-  <span id="mainSpeedText">0.00x</span>
-  <div id="mainSpeedSlider"></div>
+<div class="row row-eq-height">
+  <div class="col-sm-2">
+    <span id="mainSpeedText">0.00x</span>
+  </div>
+  <div class="col-sm-10">
+    <div id="mainSpeedSlider"></div>
+  </div>
 </div>
