--- a/web/debugger/clock_info.html
+++ b/web/debugger/clock_info.html
@@ -1,12 +1,12 @@
-<span>
+<span class="debColClockSpan">
   <b>Emulation time:</b>
   <span class="label label-primary" id="debClockTime">0</span>
 </span>
-<span>
+<span class="debColClockSpan">
   <b>Clocks:</b>
   <span class="label label-primary" id="debClock">0</span>
 </span>
-<span>
+<span class="debColClockSpan">
   <b>Frames:</b>
   <span class="label label-primary" id="debClockFrames">0</span>
 </span>
