--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/css/bootstrap-slider.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="http://getbootstrap.com.vn/examples/equal-height-columns/equal-height-columns.css" /> -->
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -47,7 +48,7 @@
         <input id="inBut" type="file" class="col-sm-3"/>
 
 
-        <div class="col-sm-offset-1 col-sm-8" id="mainBottomPanel"></div>
+        <div class="col-sm-12" id="mainBottomPanel"></div>
 
       </div><!-- /MAIN SPACE -->
 
@@ -56,13 +57,15 @@
         <div class="col-lg-12">
           <div class="row">
 
-            <button class="btn btn-primary col-sm-12" type="button" id="debButtonToggle">
-              <h3>
-                Debugger
-                <span id="debStatusOn" class="label label-success">On</span>
-                <span  id="debStatusOff" class="label label-danger" style="display: none;">Off</span>
-              </h3>
-            </button>
+            <div class="col-sm-12">
+              <button class="btn btn-primary" type="button" id="debButtonToggle">
+                <h3>
+                  Debugger
+                  <span id="debStatusOn" class="label label-success">On</span>
+                  <span  id="debStatusOff" class="label label-danger" style="display: none;">Off</span>
+                </h3>
+              </button>
+            </div>
 
             <div class="col-sm-12">
               <!-- DEBUGGER BODY -->
@@ -96,9 +99,12 @@
       </div><!-- /#debContainer -->
     </div><!-- /MAIN CONTAINER -->
     <!-- FOOTER -->
-    <footer class="row">
+    <footer class="footer">
       <small class="pull-right col-sm-2">
         <a href="https://github.com/jsaglio42">jsaglio</a>, <a href="https://github.com/Ngoguey42">ngoguey</a>
+      </small>
+      <small class="pull-right col-sm-1">
+        <a href="https://github.com/jsaglio42/GBmu">github</a>
       </small>
     </footer><!-- /FOOTER -->
 
@@ -108,15 +114,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/bootstrap-slider.min.js"></script>
 
     <script>
-      $(function(){
-      $("#debColMemRegisters").load("debugger/mem_registers.html");
-      $("#debColMemoryExplorer").load("debugger/mem_explorer.html");
-      $("#debColInstructionFlow").load("debugger/instruction_flow.html");
-      $("#debColRegisters").load("debugger/registers.html");
-      $("#debColClock").load("debugger/clock_info.html");
-      $("#mainBottomPanel").load("main_space/bottom_panel.html");
+     $(function(){
+       $("#debColMemRegisters").load("debugger/mem_registers.html");
+       $("#debColMemoryExplorer").load("debugger/mem_explorer.html");
+       $("#debColInstructionFlow").load("debugger/instruction_flow.html");
+       $("#debColRegisters").load("debugger/registers.html");
+       $("#debColClock").load("debugger/clock_info.html");
+       $("#mainBottomPanel").load("main_space/bottom_panel.html");
 
-      });
+     });
     </script>
 
     <script defer src="main.dart.js" type="application/dart"></script>
