Major changes   Add `Event` and `State` enums in worker.dart.   Add an `event stream` to AWorker to enable notifications of `Event` events inside the worker isolate.   Add 3 functions to `AWorker` to control GameBoy state and launch events accordingly.   Rewrote all 3 `worker mixins` to allow pause/resume of main loops according to `Event` and `State`.   Add `Debug` Port to `wired_isolate`.   Add 2 red debug buttons to DOM next to magbut

--- a/web/index.html
+++ b/web/index.html
@@ -43,8 +43,10 @@
       <!-- MAIN SPACE -->
       <div class="row">
 
-        <div id="magbut" class="col-sm-3">Add some random</div>
         <input id="inBut" type="file" class="col-sm-3"/>
+        <div id="magbut" class="col-sm-2">Emu (re)start</div>
+        <div id="ejectbut" class="col-sm-2">Eject</div>
+        <div id="crashbut" class="col-sm-2">Crash</div>
 
 
         <div class="col-sm-12" id="mainBottomPanel"></div>
