--- a/web/index.html
+++ b/web/index.html
@@ -79,13 +79,15 @@
 
                 <div class="col-lg-12" id="debColClock"></div>
                 <div class="col-sm-12" id="debColButtons">
-                  <button type="button" class="btn btn-success debStatusButton">Resume</button>
-                  <button type="button" class="btn btn-warning debStatusButton" style="display: none">Pause</button>
+                  <button type="button" class="btn btn-success debStatusButton" style="display: none">Resume</button>
+                  <button type="button" class="btn btn-warning debStatusButton">Pause</button>
                   <b>Auto-break:</b>
-                  <label class="radio-inline"><input type="radio" name="optradio">Instruction</label>
-                  <label class="radio-inline"><input type="radio" name="optradio">Frame</label>
-                  <label class="radio-inline"><input type="radio" name="optradio">Second</label>
-                  <label class="radio-inline"><input type="radio" name="optradio">None</label>
+                  <form>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='0'>Instruction</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='1'>Frame</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='2'>Second</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='3' checked>None</label>
+                    </form>
                 </div>
 
                 <div class="col-sm-8">
