Minor changes   Add `web/main_space/alerts.dart`, contains dynamic list of elements.

--- a/web/index.html
+++ b/web/index.html
@@ -75,17 +75,17 @@
               </div>
             </div>
             <div class="col-sm-3" id="mainAlertBox">
-              <div class="alert alert-danger">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>Crash:</strong> <span>_AssertionError {_message: "_onEjectReq with no gameboy", $thrownJsError: Error: Assertion failed: "_onEjectReq with no gameboy"</span>
-              </div>
-              <div class="alert alert-warning">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>Error:</strong> <span>Ram 'yomama.save' is not compatible with rom 'pokemon.gb'</span>
-              </div>
-              <div class="alert alert-danger">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>type</strong> <span>text</span>
+              <!-- <div class="alert alert-danger">
+                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                   <strong>Crash:</strong> <span>_AssertionError {_message: "_onEjectReq with no gameboy", $thrownJsError: Error: Assertion failed: "_onEjectReq with no gameboy"</span>
+                   </div>
+                   <div class="alert alert-warning">
+                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                   <strong>Error:</strong> <span>Ram 'yomama.save' is not compatible with rom 'pokemon.gb'</span>
+                   </div>
+                   <div class="alert alert-danger">
+                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                   <strong>type</strong> <span>text</span> -->
               </div>
             </div>
           </div>
