--- a/test/collapsable/index.html
+++ b/test/collapsable/index.html
@@ -4,8 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
 
@@ -16,33 +14,55 @@
         <div id="accordion">
           <div class="panel">
             <button data-toggle="collapse" data-parent="#accordion" href="#collapse1"
-                    type="button" class="btn btn-block collapsed"></button>
+                    type="button" class="bg-head-btn btn btn-block collapsed"></button>
             <div id="collapse1" class="panel-collapse collapse">
               <div class="panel-body">
-                <div class="cart-ram"></div>
-                <div class="cart-ss cart-ss1"></div>
-                <div class="cart-ss cart-ss2"></div>
-                <div class="cart-ss cart-ss3"></div>
-                <div class="cart-ss cart-ss4"></div>
+                <table>
+                  <tr style="height: 21px;">
+                    <th style="width: 31px;"></th>
+                    <th style="width: 3px;"></th>
+                    <th style="width: 90px;"></th>
+                    <th style="width: 127px;"></th>
+                  </tr>
+                  <tr style="height: 52px;">
+                    <th></th>
+                    <th colspan="3">
+                      <a href="#" class="cart-ram-bis"><img src="images/gb_ram.png"></img></a>
+                    </th>
+                  </tr>
+                  <tr style="height: 52px;">
+                    <th colspan="2"></th>
+                    <th>
+                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                    </th>
+                    <th>
+                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                    </th>
+                  </tr>
+                  <tr style="height: 91px;">
+                    <th colspan="2"></th>
+                    <th>
+                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                    </th>
+                    <th>
+                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                    </th>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
           <div class="panel">
             <button data-toggle="collapse" data-parent="#accordion" href="#collapse2"
-                    type="button" class="btn btn-block collapsed"></button>
+                    type="button" class="bg-head-btn btn btn-block collapsed"></button>
             <div id="collapse2" class="panel-collapse collapse">
               <div class="panel-body">
-                <div class="cart-ram"></div>
-                <div class="cart-ss cart-ss1"></div>
-                <div class="cart-ss cart-ss2"></div>
-                <div class="cart-ss cart-ss3"></div>
-                <div class="cart-ss cart-ss4"></div>
               </div>
             </div>
           </div>
           <div class="panel">
             <button data-toggle="collapse" data-parent="#accordion" href="#collapse3"
-                    type="button" class="btn btn-block collapsed"></button>
+                    type="button" class="bg-head-btn btn btn-block collapsed"></button>
             <div id="collapse3" class="panel-collapse collapse">
               <div class="panel-body">
               </div>
@@ -51,6 +71,7 @@
         </div>
       </div>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
